--- a/src/app/component/center-details/center-details.component.css
+++ b/src/app/component/center-details/center-details.component.css
@@ -94,3 +94,15 @@
 }
 
 
+.info-icon {
+  font-size: 20px;
+
+  margin-bottom: -8px;
+}
+
+.info-icon-button:hover {
+  background-color: transparent;
+  color: inherit;
+}
+
+
