--- a/src/app/component/eco-learn/eco-learn.component.html
+++ b/src/app/component/eco-learn/eco-learn.component.html
@@ -1,137 +1,122 @@
-<ng-container>
-  <app-navbar></app-navbar>
-  <div class="eco-learn-container">
-    <div class="posts-container">
-      <div  class="post-card">
-        <div class="post-header">
-          <h3 class="post-title">TITLE HERE</h3>
-          <p class="post-details">
-<!--            {{post.createdAt | date: 'longDate'}} • {{post.category}} • {{post.contentType}}-->
-            created at here •
-          </p>
-        </div>
-        <div class="post-body">
-<!--          <p class="post-text" [class.collapsed]="shouldCollapse(post.summary)">{{post.summary}}</p>-->
-<!--          <a *ngIf="shouldCollapse(post.summary)" (click)="toggleView(post)" class="view-more">View More</a>-->
-<!--          <img *ngIf="post.mediaType === 'image'" [src]="post.mediaUrl" alt="Post media" class="post-media">-->
-          <p class="post-text">
-<!--            {{post.summary}}-->
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Porttitor eget dolor morbi non arcu risus quis varius quam.
-          </p>
-<!--          <img *ngIf="post.mediaType === 'image'" [src]="post.mediaUrl" alt="Post media" class="post-media">-->
-          <img src="https://www.bootdey.com/image/1020x480/AAB611/000000" class="img-responsive post-media">
-          <!-- Add other media types as needed -->
-        </div>
-        <div class="post-footer">
-          <button class="icon-btn" ><i class="fas fa-thumbs-up"></i></button>
-          <button class="icon-btn" ><i class="fas fa-share-alt"></i></button>
-          <button class="icon-btn" ><i class="fas fa-bookmark"></i></button>
-        </div>
-      </div>
-      <div  class="post-card">
-        <div class="post-header">
-          <h3 class="post-title">TITLE HERE</h3>
-          <p class="post-details">
-            <!--            {{post.createdAt | date: 'longDate'}} • {{post.category}} • {{post.contentType}}-->
-            created at here •
-          </p>
-        </div>
-        <div class="post-body">
-          <!--          <p class="post-text" [class.collapsed]="shouldCollapse(post.summary)">{{post.summary}}</p>-->
-          <!--          <a *ngIf="shouldCollapse(post.summary)" (click)="toggleView(post)" class="view-more">View More</a>-->
-          <!--          <img *ngIf="post.mediaType === 'image'" [src]="post.mediaUrl" alt="Post media" class="post-media">-->
-          <p class="post-text">
-            <!--            {{post.summary}}-->
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Porttitor eget dolor morbi non arcu risus quis varius quam.
-          </p>
-          <!--          <img *ngIf="post.mediaType === 'image'" [src]="post.mediaUrl" alt="Post media" class="post-media">-->
-          <img src="https://www.bootdey.com/image/1020x480/AAB611/000000" class="img-responsive post-media">
-          <!-- Add other media types as needed -->
-        </div>
-        <div class="post-footer">
-          <button class="icon-btn" ><i class="fas fa-thumbs-up"></i></button>
-          <button class="icon-btn" ><i class="fas fa-share-alt"></i></button>
-          <button class="icon-btn" ><i class="fas fa-bookmark"></i></button>
-        </div>
-      </div>
-      <div  class="post-card">
-        <div class="post-header">
-          <h3 class="post-title">TITLE HERE</h3>
-          <p class="post-details">
-            <!--            {{post.createdAt | date: 'longDate'}} • {{post.category}} • {{post.contentType}}-->
-            created at here •
-          </p>
-        </div>
-        <div class="post-body">
-          <!--          <p class="post-text" [class.collapsed]="shouldCollapse(post.summary)">{{post.summary}}</p>-->
-          <!--          <a *ngIf="shouldCollapse(post.summary)" (click)="toggleView(post)" class="view-more">View More</a>-->
-          <!--          <img *ngIf="post.mediaType === 'image'" [src]="post.mediaUrl" alt="Post media" class="post-media">-->
-          <p class="post-text">
-            <!--            {{post.summary}}-->
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Porttitor eget dolor morbi non arcu risus quis varius quam.
-          </p>
-          <!--          <img *ngIf="post.mediaType === 'image'" [src]="post.mediaUrl" alt="Post media" class="post-media">-->
-          <img src="https://www.bootdey.com/image/1020x480/AAB611/000000" class="img-responsive post-media">
-          <!-- Add other media types as needed -->
-        </div>
-        <div class="post-footer">
-          <button class="icon-btn" ><i class="fas fa-thumbs-up"></i></button>
-          <button class="icon-btn" ><i class="fas fa-share-alt"></i></button>
-          <button class="icon-btn" ><i class="fas fa-bookmark"></i></button>
-        </div>
-      </div>
-      <div  class="post-card">
-        <div class="post-header">
-          <h3 class="post-title">TITLE HERE</h3>
-          <p class="post-details">
-            <!--            {{post.createdAt | date: 'longDate'}} • {{post.category}} • {{post.contentType}}-->
-            created at here •
-          </p>
-        </div>
-        <div class="post-body">
-          <!--          <p class="post-text" [class.collapsed]="shouldCollapse(post.summary)">{{post.summary}}</p>-->
-          <!--          <a *ngIf="shouldCollapse(post.summary)" (click)="toggleView(post)" class="view-more">View More</a>-->
-          <!--          <img *ngIf="post.mediaType === 'image'" [src]="post.mediaUrl" alt="Post media" class="post-media">-->
-          <p class="post-text">
-            <!--            {{post.summary}}-->
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Porttitor eget dolor morbi non arcu risus quis varius quam.
-          </p>
-          <!--          <img *ngIf="post.mediaType === 'image'" [src]="post.mediaUrl" alt="Post media" class="post-media">-->
-          <img src="https://www.bootdey.com/image/1020x480/AAB611/000000" class="img-responsive post-media">
-          <!-- Add other media types as needed -->
-        </div>
-        <div class="post-footer">
-          <button class="icon-btn" ><i class="fas fa-thumbs-up"></i></button>
-          <button class="icon-btn" ><i class="fas fa-share-alt"></i></button>
-          <button class="icon-btn" ><i class="fas fa-bookmark"></i></button>
-        </div>
-      </div>
-      <div  class="post-card">
-        <div class="post-header">
-          <h3 class="post-title">TITLE HERE</h3>
-          <p class="post-details">
-            <!--            {{post.createdAt | date: 'longDate'}} • {{post.category}} • {{post.contentType}}-->
-            created at here •
-          </p>
-        </div>
-        <div class="post-body">
-          <!--          <p class="post-text" [class.collapsed]="shouldCollapse(post.summary)">{{post.summary}}</p>-->
-          <!--          <a *ngIf="shouldCollapse(post.summary)" (click)="toggleView(post)" class="view-more">View More</a>-->
-          <!--          <img *ngIf="post.mediaType === 'image'" [src]="post.mediaUrl" alt="Post media" class="post-media">-->
-          <p class="post-text">
-            <!--            {{post.summary}}-->
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Porttitor eget dolor morbi non arcu risus quis varius quam.
-          </p>
-          <!--          <img *ngIf="post.mediaType === 'image'" [src]="post.mediaUrl" alt="Post media" class="post-media">-->
-          <img src="https://www.bootdey.com/image/1020x480/AAB611/000000" class="img-responsive post-media">
-          <!-- Add other media types as needed -->
-        </div>
-        <div class="post-footer">
-          <button class="icon-btn" ><i class="fas fa-thumbs-up"></i></button>
-          <button class="icon-btn" ><i class="fas fa-share-alt"></i></button>
-          <button class="icon-btn" ><i class="fas fa-bookmark"></i></button>
+<ng-container *ngIf="(ecoLearnState$ | async) as state" [ngSwitch]="state.dataState">
+  <ng-container *ngSwitchCase="DataState.LOADED">
+    <app-navbar [user]="state?.appData?.data?.user"></app-navbar>
+
+    <div style="margin-top: 100px"> </div>
+    <section>
+      <div class="container mt-4">
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a [routerLink]="['/']">Home</a></li>
+            <li class="breadcrumb-item"><a [routerLink]="['/eco-learn']">EcoLearn</a></li>
+            <li class="breadcrumb-item active" aria-current="page">New</li>
+          </ol>
+        </nav>
+
+        <div class="eco-learn-container">
+
+          <ul class="nav nav-tabs" id="resourceTabs" role="tablist">
+            <li class="nav-item" role="presentation">
+              <button class="nav-link active" id="all-resources-tab" data-bs-toggle="tab" data-bs-target="#all-resources" type="button" role="tab" aria-controls="all-resources" aria-selected="true">All Resources</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" id="liked-resources-tab" data-bs-toggle="tab" data-bs-target="#liked-resources" type="button" role="tab" aria-controls="liked-resources" aria-selected="false">Liked</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" id="saved-resources-tab" data-bs-toggle="tab" data-bs-target="#saved-resources" type="button" role="tab" aria-controls="saved-resources" aria-selected="false">Saved</button>
+            </li>
+          </ul>
+          <!-- New Resource Form -->
+
+          <div class="posts-container">
+            <ng-container *ngFor="let resource of state?.appData?.data?.page?.content">
+              <div class="post-card">
+                <div class="post-header">
+                  <h3 class="post-title">{{resource.title}}</h3>
+                  <p class="post-details">
+                    {{resource.createdAt | date: 'longDate'}} • {{resource.categories[0] }} • {{resource.contentType}}
+                  </p>
+                </div>
+                <div class="post-body">
+                  <p class="post-text" [class.collapsed]="shouldCollapse(resource.content)">{{resource.content}}</p>
+                  <a *ngIf="shouldCollapse(resource.content)"  class="view-more">View More</a>
+                  <ng-container  *ngIf="resource.contentType !== 'VIDEO'" >
+
+                    <img [src]="resource.media" width="1080" height="480" class="img-responsive post-media" alt="">
+                  </ng-container>
+
+                  <ng-container *ngIf="resource.contentType === 'VIDEO'">
+
+                    <vg-player [style.width]="'780px'" [style.height]="'480px'">
+                                        <vg-overlay-play></vg-overlay-play>
+                                        <vg-buffering></vg-buffering>
+                                        <vg-scrub-bar>
+                                          <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
+                      <!--                    <vg-scrub-bar-buffering-time></vg-scrub-bar-buffering-time>-->
+                                        </vg-scrub-bar>
+                      <vg-controls>
+                        <vg-play-pause></vg-play-pause>
+                        <vg-time-display vgProperty="current" vgFormat="mm:ss"></vg-time-display>
+                        <vg-scrub-bar style="pointer-events: none;"></vg-scrub-bar>
+                        <vg-track-selector></vg-track-selector>
+                        <vg-mute></vg-mute>
+                        <vg-volume></vg-volume>
+                        <vg-fullscreen></vg-fullscreen>
+                      </vg-controls>
+                      <vg-buffering></vg-buffering>
+                      <video  [vgMedia]="$any(media)" #media id="resourceVideo" preload="auto" crossorigin>
+                        <source [src]="resource.media" type="video/mp4">
+                      </video>
+                    </vg-player>
+                  </ng-container>
+                </div>
+                <div class="post-footer">
+                  <button class="icon-btn"><i class="fas fa-thumbs-up"></i></button>
+                  <button class="icon-btn"><i class="fas fa-share-alt"></i></button>
+                  <button class="icon-btn"><i class="fas fa-bookmark"></i></button>
+                </div>
+              </div>
+            </ng-container>
+          </div>
+
+          <aside class="filter-sidebar">
+            <div class="mb-4">
+              <h5 >Apply Filters</h5>
+            </div>
+
+            <form [formGroup]="searchForm" (submit)="searchEducationalResourcesSubmit($event)">
+              <input formControlName="title" placeholder="Search by title" class="form-control">
+
+              <input type="text" formControlName="contentType" class="form-control" id="contentType" [typeahead]="availableContentTypes" [minLength]="0" [typeaheadWaitMs]="10" placeholder="Select Post Content Type">
+
+
+              <!-- Categories Filter -->
+              <input type="text" formControlName="categories" class="form-control" id="categories" [typeahead]="availableCategories" [minLength]="0" [typeaheadWaitMs]="10" placeholder="Select Category" (typeaheadOnSelect)="onSelectCategory($event)">
+
+              <!-- Sorting Options -->
+              <select formControlName="sortBy" class="form-control">
+                <option value="createdAt">Date</option>
+                <option value="title">Title</option>
+              </select>
+
+              <select formControlName="sortOrder" class="form-control">
+                <option value="ascending">Ascending</option>
+                <option value="descending">Descending</option>
+              </select>
+
+                        <button type="submit" class="btn btn-primary">Clear Filters</button>
+            </form>
+
+            <!-- Recommended Categories -->
+            <div class="recommended-categories">
+              <h5>Recommended Categories</h5>
+              <div class="categories-chips">
+                <!--            <span *ngFor="let category of recommendedCategories" (click)="onSelectRecommendedCategory(category)" class="category-chip">{{category}}</span>-->
+              </div>
+            </div>
+          </aside>
         </div>
       </div>
-    </div>
-  </div>
+    </section>
+  </ng-container>
 </ng-container>
